# hyperphysics

./: Cargo.toml  PERFORMANCE.md  README.md
benches/: mass_properties.rs
src/: body.rs  contact.rs  em.rs  error.rs  fluid.rs  gjk.rs  integration.rs  lib.rs  main.rs  mass.rs  material.rs  optics.rs  photochemistry.rs  property.rs  residual.rs  shape.rs  thermal.rs
tests/: contact.rs  dispatch_trace.rs  em.rs  fluid.rs  integration.rs  mass_properties.rs  optics.rs  photochemistry.rs  property.rs  residual.rs  shape_queries.rs  thermal.rs
