[package]
name = "hyperphysics"
version = "0.2.1"
edition = "2024"
description = "Hyperreal-backed physical simulation primitives"
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/timschmidt/hyperphysics"
readme = "README.md"
keywords = ["physics", "simulation", "hyperreal", "dynamics"]
categories = ["science", "simulation", "mathematics"]

[dependencies]
# Hyper ecosystem dependencies: keep the crate-official release references and
# the commented workspace references below. Switch to the workspace form for
# local development, then switch back to crates.io versions before publishing.
hyperlattice = { path = "../hyperlattice" }
hyperlimit = { path = "../hyperlimit" }
hypermesh = { path = "../hypermesh", default-features = false, features = ["exact"] }
hyperreal = { version = "0.12.0" }
hypersolve = { version = "0.2.0" }
# hyperlattice = { path = "../hyperlattice" }
# hyperreal = { path = "../hyperreal" }
# hypersolve = { path = "../hypersolve" }
[dev-dependencies]
proptest = "1.7.0"

[[bench]]
name = "mass_properties"
harness = false
